--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,11 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+#Mac
+.DS_Store
+
+#IntelliJ
+# Intellij project files
+*.iws
+.idea
